--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     </form>
     </div>
     
-
+    <!-- Create a DIV for buttons -->
+    <div id="something">Button</div>
     <div id="gifs-appear-here">
     </div>
     <!-- jQuery script tag -->
